# diagram-tour

./: .gitignore  CONVENTIONS.md  LICENSE  README.md  SKILL.md  install.sh  pyproject.toml
diagram_tour/: __init__.py  __main__.py  render_video.py
diagram_tour/lib/: cache.py  config.py  highlights.py  matcher.py  parse_dot.py  parse_tour_md.py  piper_tts.py  render.py  transitions.py  types.py  voices.py
examples/agent-architecture/: agent-architecture-tour.md  agent-architecture.dot
